--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "dev": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "start": "nodemon server"
   },
   "dependencies": {
     "core-js": "^3.6.4",
@@ -16,7 +17,9 @@
     "@vue/cli-plugin-babel": "~4.2.0",
     "@vue/cli-plugin-vuex": "~4.2.0",
     "@vue/cli-service": "~4.2.0",
+    "express": "^4.17.1",
     "node-sass": "^4.12.0",
+    "nodemon": "^2.0.3",
     "sass-loader": "^8.0.2",
     "vue-template-compiler": "^2.6.11"
   },
