--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "start": "nodemon server"
+    "start": "node server"
   },
   "dependencies": {
     "core-js": "^3.6.4",
