--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: "3"
 services:
   server:
-    build: .
+    build: ./
     ports:
       - "80:80"
     restart: always
+    volumes:
+      - "./:/server"
