--- a/package.json
+++ b/package.json
@@ -8,15 +8,19 @@
     "start": "node server"
   },
   "dependencies": {
-    "core-js": "^3.6.4",
     "vue": "^2.6.11",
     "vue2-touch-events": "^2.2.1",
     "vuex": "^3.1.2"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-vuex": "~4.2.0",
-    "@vue/cli-service": "~4.2.0",
+    "@babel/compat-data": "^7.10.5",
+    "@babel/plugin-proposal-numeric-separator": "^7.10.4",
+    "@vue/cli": "4.2.0",
+    "@vue/cli-plugin-babel": "4.2.0",
+    "@vue/cli-plugin-vuex": "4.2.0",
+    "@vue/cli-service": "4.2.0",
+    "babel": "^6.23.0",
+    "core-js": "^3.6.4",
     "express": "^4.17.1",
     "node-sass": "^4.12.0",
     "nodemon": "^2.0.3",
